<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcJorgeActivity">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/screen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="6dp"
                android:background="@color/white"
                android:text="@string/pantalla"
                android:textSize="140sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>

        <!--primera fila-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton0"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/buttonIgual"
                android:layout_width="306dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="@string/botonIgual"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintBounds" />
        </LinearLayout>

        <!--segunda fila-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/segundaFila">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton1"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck"></Button>

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton2"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"></Button>

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton3"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/buttonSum"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/botonSuma"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

        </LinearLayout>
        <!--tercera fila-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton4"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton5"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton6"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/buttonRest"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/botonRestar"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>
        </LinearLayout>
        <!--cuarta fila-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton7"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton8"
                android:textColor="@color/purple"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="@color/white"
                android:text="@string/boton9"
                android:textColor="#BA68C8"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/buttonMult"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="#EABD37"
                android:text="@string/botonMultiplicar"
                android:textColor="#9C27B0"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

        </LinearLayout>

        <!--quinta fila-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/CE"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="#292B2A"
                android:text="@string/botonCE"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/buttonDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:backgroundTint="#EABD37"
                android:text="@string/botonDividir"
                android:textColor="#9C27B0"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout"></Button>

            <Button
                android:id="@+id/buttonBorrar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:text="@string/btnBorrar"
                android:textSize="40sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonDecimal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="6dp"
                android:text="@string/botonDecimal"
                android:textSize="40sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>