<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:id="@+id/Calculadoras"
       android:layout_width="match_parent"
       android:layout_height="450sp"
       android:orientation="vertical"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/Calculadoras"
          android:textSize="50sp"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:layout_margin="10dp"/>
      <Button
          android:id="@+id/calculadoraJoseLuis"
          android:layout_width="350sp"
          android:layout_height="115dp"
          android:text="@string/calculadora_jose_luis"
          android:backgroundTint="@color/VerdeOscuro"
          android:textSize="30sp"
          android:layout_marginStart="28dp"/>

      <Button
          android:id="@+id/calculadoraJorge"
          android:layout_width="350dp"
          android:layout_height="115dp"
          android:layout_marginStart="28dp"
          android:backgroundTint="@color/VerdeOscuro"
          android:text="@string/calculadora_jorge"
          android:textSize="30sp" />

      <Button
          android:id="@+id/calculadoraLucia"
          android:layout_width="350dp"
          android:layout_height="115dp"
          android:text="@string/calculadora_lucia"
          android:backgroundTint="@color/VerdeOscuro"
          android:textSize="30sp"
          android:layout_marginStart="28dp"/>
   </LinearLayout>

   <LinearLayout
       android:id="@+id/ImcMasSalir"
       android:layout_width="415dp"
       android:layout_height="297dp"
       app:layout_constraintTop_toBottomOf="@+id/Calculadoras"
       android:orientation="vertical"
       tools:layout_editor_absoluteX="0dp"
       tools:ignore="MissingConstraints">

      <TextView
          android:layout_width="402dp"
          android:layout_height="60dp"
          android:layout_margin="10dp"
          android:text="@string/imc1"
          android:textAlignment="center"
          android:textColor="@color/white"
          android:textSize="40sp" />
      <Button
          android:id="@+id/IMC"
          android:layout_width="350dp"
          android:layout_height="90dp"
          android:layout_marginStart="28dp"
          android:textSize="30sp"
          android:backgroundTint="@color/VerdeOscuro"
          android:text="@string/imc1"/>
      <Button
          android:id="@+id/salir"
          android:layout_width="350dp"
          android:layout_height="90dp"
          android:layout_marginStart="28dp"
          android:backgroundTint="@color/VerdeOscuro"
          android:textSize="30sp"
          android:text="@string/salir"/>
   </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>